# comic-reader

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  CLAUDE.md  LINTING.md  package.json  pnpm-lock.yaml
mobile/: index.html  package.json  vite.config.ts
mobile/src/: App.css  api.ts
mobile/src/locales/en/: translation.json
mobile/src/locales/zh/: translation.json
mobile/src/pages/: Library.tsx  Reader.tsx
src/: App.css  App.tsx  constants.ts  i18n.ts  main.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  models.rs  protocol.rs  scanner.rs  server.rs  thumbnail.rs
src/components/: ComicCard.tsx  LibraryView.tsx  ReaderView.tsx  SettingsDialog.tsx  Toolbar.tsx
src/locales/en/: translation.json
src/locales/zh/: translation.json
src/store/: useAppStore.ts
src/types/: index.ts
web/: index.html  package.json  tsconfig.json  vite.config.ts
web/src/: App.css  App.tsx  api.ts  i18n.ts  main.tsx
web/src/locales/en/: translation.json
web/src/locales/zh/: translation.json
web/src/pages/: Library.tsx  Reader.tsx
