[package]
name = "comic-dev"
version = "0.1.0"
description = "A Tauri Comic Reader"
authors = ["you"]
edition = "2021"

[lib]
name = "comic_dev_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde_json = "1"

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.37", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.31"
rayon = "1.10"
zip = "2.2"
image = { version = "0.25", features = ["webp"] }
webp = "0.3"
blake3 = "1.5"
walkdir = "2.5"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
axum = "0.7"
tokio = { version = "1", features = ["sync", "net", "rt-multi-thread"] }
local-ip-address = "0.6"
tower-http = { version = "0.5", features = ["cors", "fs"] }
